--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,8 @@
   },
   "plugins": ["react"],
   "rules": {
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "no-unused-vars": "warn"
   },
   "settings": {
     "react": {
